pairing fixes
